Fix SVG overlay issue on smaller screens overlapping navbar, preventing navbar clicks

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -3,6 +3,8 @@
   user-select: none;
   margin: 0 auto;
   padding: 0.625rem 2rem;
+  position: relative;
+  z-index: 100;
 
   @media (min-width: 698px) {
     max-width: 850px;
