--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -80,6 +80,8 @@
     }
 
     .main-container {
+      position: relative;
+      z-index: 0;
       display: flex;
       align-items: center;
       flex-direction: column;
